// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prepareDebuggerShellFromDotSlashFile fails with the expected error message for a missing dotslash file 1`] = `
Object {
  "code": "unexpected_error",
  "humanReadableMessage": "An unexpected error occurred while installing the latest version of React Native DevTools. Using a fallback version instead.",
  "verboseInfo": Any<String>,
}
`;

exports[`prepareDebuggerShellFromDotSlashFile fails with the expected error message for missing platforms 1`] = `
Object {
  "code": "platform_not_supported",
  "humanReadableMessage": "The latest version of React Native DevTools is not supported on this platform. Using a fallback version instead.",
  "verboseInfo": Any<String>,
}
`;

exports[`prepareDebuggerShellFromDotSlashFile scenarios requiring a local HTTP server fails with the expected error message for a corrupted tarball 1`] = `
Object {
  "code": "possible_corruption",
  "humanReadableMessage": "Failed to verify the latest version of React Native DevTools. Using a fallback version instead. ",
  "verboseInfo": Any<String>,
}
`;

exports[`prepareDebuggerShellFromDotSlashFile scenarios requiring a local HTTP server fails with the expected error message for a network error 1`] = `
Object {
  "code": "likely_offline",
  "humanReadableMessage": "Failed to download the latest version of React Native DevTools. Using a fallback version instead. Connect to the internet or check your network settings.",
  "verboseInfo": Any<String>,
}
`;
